    the MathML reader now checks that a <math> element or the body
    of a <lambda> element use appropriate tags as detailed
    in the schema for the subset of MathML supported.
    
  - The MATLAB binding now correctly identifies the use of the csymbol
    delay and provides the information to the user in a similar fashion
    to csymbol time.

* Bug fixes:

  - Tracker issue #2187684
    The unit checking code was not correctly interpreting the units of
    a reaction id used as a ci element in a math expression.  This is
    fixed and tested.

  - Tracker issue #2209773
    libSBML couldn't be built with the Xerces 3.0.0 due to its incompatible 
    API changes.

  - Tracker issue #2209729
    libSBML built with Xerces on Linux could crash due to a dereference 
    of null pointer in Xerces side when parsing some invalid SBML file.
    Thanks to Jordan Atlas for reporting this problem.

  - The code that checks for AssignmentCycles was failing to check
    for an assignment to a compartment that referred to the a species
    concentration within that compartment. This is an implicit reference
    to the compartment itself, since the concentration of the species
    depends on the compartment value.  This is now fixed.

  - Tracker issue #2130568
    The check for AssignmentCycles was incorrectly reporting non-existant
    loops. This is fixed.  Thanks to Kieran Smallbone for reporting it.

  - The code that checks for AssignmentCycles was failing to check
    for an assignment that referred to the subject of that assignment,
    e.g. an assignment rule with variable "c" and math "2 * c" was
    not returning an error.  This is now fixed.

  - Tracker issue #2129044
    The writeRootFunction in the mathML writer was failing to output a
    root function correctly when it had only one child i.e. the default 
    degree of 2 was being used.  Thanks to Ralph Gauges for spotting this.

  - Tracker issue #2157800